# neuralforge-x

./: .env.example  .gitignore  Info.txt  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
benchmark_lab/: README.md  __init__.py  __main__.py  backends.py  charts.py  environment.py  gpu.py  metrics.py  report.py  workloads.py
benchmark_lab/results/: cross_stack.json  gpu_bench.json  python_vs_rust.json
cuda_engine/: README.md  pyproject.toml
cuda_engine/benchmarks/: bench_gpu.py
cuda_engine/neuralforge_cuda/: __init__.py  _capability.py  _cuda.py  _torch.py  _triton.py
cuda_engine/neuralforge_cuda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cuda_engine/neuralforge_cuda/kernels/: similarity.cu
cuda_engine/tests/: test_gpu.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CAPACITY_PLANNING.md  DEVELOPER_GUIDE.md  PERFORMANCE.md  SECURITY.md  SYSTEM_DESIGN.md  index.md
docs/assets/gifs/: README.md
examples/: 01_quickstart.py  02_numpy_vs_rust_benchmark.py  03_vector_db.py  README.md
observability/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
observability/grafana/dashboards/: neuralforge.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  routes.rs  state.rs  telemetry.rs
observability/tests/: api.rs
profiling/: CPU_PROFILE.md  Cargo.toml  README.md  analyze.py  gpu_workload.py
profiling/scripts/: cpu_flamegraph.ps1  gpu_nsight.ps1
profiling/src/: main.rs
python_sdk/: Cargo.toml  README.md
python_sdk/python/neuralforge/: __init__.py  _exceptions.py  _native.pyi  _vector_db.py
python_sdk/src/: lib.rs
research/: README.md
rust_core/: Cargo.toml  README.md
rust_core/benches/: similarity.rs  topk.rs
rust_core/src/: error.rs  lib.rs  matrix.rs  metric.rs  simd.rs  similarity.rs  topk.rs
rust_core/tests/: kernels.rs
scripts/: demo.tape  dev_build.ps1  setup.ps1
site/: 404.html  index.html  sitemap.xml
site/API_REFERENCE/: index.html
site/ARCHITECTURE/: index.html
site/CAPACITY_PLANNING/: index.html
site/DEVELOPER_GUIDE/: index.html
site/PERFORMANCE/: index.html
site/SECURITY/: index.html
site/SYSTEM_DESIGN/: index.html
site/search/: search_index.json
tests/: test_benchmark_lab.py  test_errors.py  test_kernels.py  test_profiling.py  test_vector_db.py
vector_db/: Cargo.toml  README.md
vector_db/benches/: hnsw.rs
vector_db/src/: error.rs  hnsw.rs  lib.rs  metadata.rs  persistence.rs  store.rs
vector_db/tests/: recall.rs
