[package]
name = "neuralforge"
description = "PyO3 bindings exposing the NeuralForge-X core kernels to Python."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
# The compiled artifact is renamed to `neuralforge/_native.pyd` by maturin
# (see `module-name` in the root pyproject.toml). It is a private extension
# module; the public, typed API lives in the pure-Python `neuralforge` package.
name = "neuralforge_native"
crate-type = ["cdylib"]

[dependencies]
neuralforge_core = { path = "../rust_core" }
neuralforge_vector_db = { path = "../vector_db" }
pyo3 = { workspace = true }
numpy = { workspace = true }
serde_json = { workspace = true }
